--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MVI App</string>
+    <string name="title">Title</string>
+    <string name="description">Description</string>
 </resources>
